src/objects/DER_Bundle_Log__c.object
<CustomObject>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_To_Contact__c</fullName>
        <label>Email To Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Transfers__c</fullName>
        <label>Failed Transfers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Successful_Transfers__c</fullName>
        <label>Successful Transfers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfers_Missing_Attachment__c</fullName>
        <label>Transfers Missing Attachment</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DER Bundle Log</label>
    <nameField>
        <displayFormat>DEB-{00000}</displayFormat>
        <label>DER Bundle Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DER Bundle Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>